# PJC

./: .gitignore  .gitignore.swp  CMakeCache 1.txt  CMakeCache.txt  CMakeLists.txt  GameOfLife  GameOfLife 1  GameOfLife.pro  INSTALL 1  Makefile  Makefile 1  area.cpp  area.h  area.ui  cmake_install.cmake  cmake_uninstall.cmake  install 1.sh  install_manifest 1.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_area.cpp  moc_mainwindow.cpp  ui_area.h  ui_mainwindow.h
src/: CMakeLists.txt  area.cpp  area.h  area.ui  cell.cpp  cell.h  cmake_install 1.cmake  gamearea 1.cpp  gamearea.cpp  gamearea.h  gamearea.ui  gameinterface.cpp  gameinterface.h  gameoflife.desktop  gameoflife.kss  gameoflife.kss.shell  gameoflife.kss_automoc.cpp  gameoflife.kss_automoc.cpp.files  gamescreensaver.cpp  gamescreensaver.h  gamesettings.cpp  gamesettings.h  gamesetup.cpp  gamesetup.h  gamesetup.ui  main.cpp  mainwindow.cpp  mainwindow.h
src 1/: Makefile  cell.h  gamearea.h  gameinterface.cpp  gameinterface.h  gameoflife.kss.1  gamesettings.cpp
src 1/CMakeFiles 1/gameoflife.kss.dir/: DependInfo.cmake
